# documents_collector

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  Makefile  README.md  REPORT.md  pyproject.toml
configs/: config.yaml
dags/rada_data_source/: README.md  config.yml  document_pipeline_dag.py
docker/: Dockerfile  docker-compose.yaml  init-db.sql
outputs/: collection_runs_sample.csv  dictionaries_export.csv  documents_sample.csv  documents_statistics.json  pipeline_run_metrics.json
outputs/minio_dump/dictionaries/snapshots/source=rada/date=2026-02-02/: status.json  theme.json
outputs/minio_dump/processed/by_collection/date=2026-02-02/source=rada/: 106981.md  117040.md  144771.md  154000.md  16387.md  174023.md  178129.md  19746.md  198377.md  202219.md  225988.md  23047.md  234262.md  237967.md  261946.md  262960.md  278724.md  306649.md  310651.md  325337.md  328582.md  33137.md  3347.md  340994.md  34449.md  351357.md  360538.md  379437.md  379520.md  382403.md  384790.md  389477.md  389656.md  39036.md  403611.md  404954.md  407017.md  4096.md  416736.md  417948.md  (+251 more)
outputs/minio_dump/raw/by_collection/date=2026-02-02/source=rada/: 106981.txt  107637.txt  116633.txt  117040.txt  119580.meta.json  123347.txt  129362.txt  129651.txt  131913.txt  134232.meta.json  134232.txt  14152.meta.json  14152.txt  14155.meta.json  154000.txt  (+502 more)
pipeline/: __init__.py  db.py  storage.py  utils.py
pipeline/collectors/: __init__.py  base.py  rada.py
pipeline/tasks/: __init__.py  collect.py  load.py  maintenance.py  quality.py  transform.py
scripts/: run_pipeline.py
(+747 files in other folders)
